// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Table – simple mode renders table with data 1`] = `
"╭─────────┬─────┬─────────╮
│ name    │ age │ city    │
├─────────┼─────┼─────────┤
│ Alice   │ 30  │ NYC     │
│ Bob     │ 25  │ LA      │
│ Charlie │ 35  │ Chicago │
╰─────────┴─────┴─────────╯
\x1B[?25l"
`;

exports[`Table – simple mode renders with specific columns 1`] = `
"╭─────────┬─────╮
│ name    │ age │
├─────────┼─────┤
│ Alice   │ 30  │
│ Bob     │ 25  │
│ Charlie │ 35  │
╰─────────┴─────╯
\x1B[?25l"
`;

exports[`Table – simple mode renders empty table 1`] = `
"╭╮
│
├┤
╰╯
\x1B[?25l"
`;

exports[`Table – simple mode renders with custom padding 1`] = `
"╭─────────┬─────┬─────────╮
│ name    │ age │ city    │
├─────────┼─────┼─────────┤
│ Alice   │ 30  │ NYC     │
│ Bob     │ 25  │ LA      │
│ Charlie │ 35  │ Chicago │
╰─────────┴─────┴─────────╯
\x1B[?25l"
`;

exports[`Table – advanced mode renders with columns and rows 1`] = `
"╭────────┬────────╮
│ Name   │  Price │
├────────┼────────┤
│ Widget │ $10.00 │
│ Gadget │ $25.00 │
╰────────┴────────╯
\x1B[?25l"
`;

exports[`Table – advanced mode renders with footer rows 1`] = `
"╭────────┬────────╮
│ Item   │  Price │
├────────┼────────┤
│ Widget │ $10.00 │
│ Gadget │ $25.00 │
├────────┼────────┤
│ Total  │ $35.00 │
╰────────┴────────╯
\x1B[?25l"
`;

exports[`Table – advanced mode renders with colored cells 1`] = `
"╭─────────┬───────╮
│ Status  │ Count │
├─────────┼───────┤
│ Passing │    42 │
│ Failing │     3 │
│ Skipped │     7 │
╰─────────┴───────╯
\x1B[?25l"
`;

exports[`Table – advanced mode renders with custom node cells 1`] = `
"╭────────┬────────╮
│ Name   │ Bar    │
├────────┼────────┤
│ Task 1 │ ████░░ │
╰────────┴────────╯
\x1B[?25l"
`;

exports[`Table – advanced mode truncates long headers 1`] = `
"╭────────────┬───────╮
│ A Very Lo… │ Short │
├────────────┼───────┤
│ a          │ b     │
╰────────────┴───────╯
\x1B[?25l"
`;
